<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="beer"
            type="com.box.punkapi.model.Beer" />
    </data>

    <LinearLayout
        android:id="@+id/detail_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/detail_include_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_include_title_margin"
            android:text="@string/description"
            android:textSize="@dimen/detail_tagLine_textSize"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_include_content_margin"
            android:text="@{beer.description}"
            android:textSize="@dimen/detail_include_textSize" />

        <include
            layout="@layout/bottom_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/detail_include_content_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_include_title_margin"
            android:text="@string/beerSingleValues"
            android:textSize="@dimen/detail_include_textSize"
            android:textStyle="bold" />

        <include
            android:id="@+id/detail_num_single_values_include"
            layout="@layout/detail_num_single_values_include"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_include_title_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_include_title_margin"
            android:text="@string/volume"
            android:textSize="@dimen/detail_tagLine_textSize"
            android:textStyle="bold" />

        <include
            android:id="@+id/detail_volume_include"
            layout="@layout/detail_volume_include"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_include_title_margin"
            />


        <TextView
            android:id="@+id/detail_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_margin"
            android:text="@string/method"
            android:textSize="@dimen/detail_tagLine_textSize"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_name" />


        <LinearLayout
            android:id="@+id/detail_method_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_include_title_margin"
            android:orientation="vertical"
            android:scrollbars="none" />


        <include
            layout="@layout/bottom_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/detail_include_content_margin" />

        <TextView
            android:id="@+id/detail_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_margin"
            android:text="@string/ingredients"
            android:textSize="@dimen/detail_tagLine_textSize"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_name" />


        <LinearLayout
            android:id="@+id/detail_ingredients_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_include_title_margin"
            android:orientation="vertical"
            android:scrollbars="none" />


        <include
            layout="@layout/bottom_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/detail_include_content_margin" />

    </LinearLayout>
</layout>

