<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="beer"
            type="com.box.punkapi.model.Beer" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/detail_imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:transitionName="@{String.valueOf(beer.id)}"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_margin"
                android:layout_marginTop="@dimen/detail_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{beer.name}"
                android:textSize="@dimen/detail_name_textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_imageView" />

            <TextView
                android:id="@+id/detail_tagLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_margin"
                android:layout_marginTop="@dimen/detail_margin"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{beer.tagline}"
                android:textSize="@dimen/detail_tagLine_textSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_name" />

            <include
                android:id="@+id/detail_include"
                layout="@layout/detail_include"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_margin"
                app:layout_constraintTop_toBottomOf="@id/detail_tagLine" />

            <TextView
                android:id="@+id/food_pairing_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_pairing"
                android:layout_marginTop="@dimen/detail_margin"
                android:layout_marginStart="@dimen/detail_margin"
                android:textSize="@dimen/detail_tagLine_textSize"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/detail_include"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail_food_pairing_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:layout_marginTop="@dimen/detail_margin"
                android:layout_marginStart="@dimen/detail_margin"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/food_pairing_title"
                />
            <TextView
                android:id="@+id/detail_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brewers_tips"
                android:layout_marginTop="@dimen/detail_margin"
                android:layout_marginStart="@dimen/detail_margin"
                android:textSize="@dimen/detail_tagLine_textSize"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/detail_food_pairing_recyclerView"
                />
            <TextView
                android:id="@+id/detail_brewers_tips"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_margin"
                android:layout_marginTop="@dimen/detail_margin"
                android:layout_marginEnd="@dimen/detail_margin"
                android:text="@{beer.brewers_tips}"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_tips" />

            <TextView
                android:id="@+id/detail_contribute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contributed_by"
                android:layout_marginTop="@dimen/detail_margin"
                android:layout_marginStart="@dimen/detail_margin"
                android:textSize="@dimen/detail_tagLine_textSize"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/detail_brewers_tips"
                />
            <TextView
                android:id="@+id/detail_contribute_by"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_margin"
                android:layout_marginTop="@dimen/detail_margin"
                android:text="@{beer.contributed_by}"
                android:layout_marginEnd="@dimen/detail_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_contribute" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>